Deployed by grunt gh-pages

--- a/code/gasket.html
+++ b/code/gasket.html
@@ -49,12 +49,11 @@ main()
  <div>
  <label>Fill type </label>
  <select id="fill">
-  <option value="wire">wireframe</option>
+  <option value="mesh">wireframe</option>
   <option value="solid">solid</option>
  </select>
  </div></br>
  <div>
-  <input type="checkbox" name="type" value="gasket">Gasket
   <button id="reset" onclick=reset()>reset</button>
 </div>
  </br>
