--- a/code/assignment2.html
+++ b/code/assignment2.html
@@ -35,7 +35,7 @@ void main()
 
 <body>
 <div>
-<canvas id="gl-canvas" width="512"" height="512">
+<canvas id="gl-canvas" width="600" height="600">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 </div>
