--- a/code/assignment3.html
+++ b/code/assignment3.html
@@ -1,131 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-<title>Assignment 3: CAD-Like Program </title>
-<link rel="stylesheet" href="css/assignment3.css">
-<script id="vertex-shader" type="x-shader/x-vertex">
+  <script id="vertex-shader" type="x-shader/x-vertex">
+  attribute vec4 vPosition;
+  uniform vec3 theta;
+  uniform vec3 scale;
+  uniform vec3 translate;
+  uniform mat4 modelViewMatrix;
 
-attribute vec4 vPosition;
-attribute vec4 vColor;
+  void main() {
+    vec3 angles = radians( theta );
+    vec3 c = cos( angles );
+    vec3 s = sin( angles );
+    mat4 rx = mat4(
+      1.0,  0.0,  0.0, 0.0,
+	    0.0,  c.x,  s.x, 0.0,
+	    0.0, -s.x,  c.x, 0.0,
+	    0.0,  0.0,  0.0, 1.0
+    );
+    mat4 ry = mat4(c.y, 0.0, -s.y, 0.0,0.0, 1.0,  0.0, 0.0,s.y, 0.0,  c.y, 0.0,0.0, 0.0,  0.0, 1.0);
+    mat4 rz = mat4(c.z, -s.z, 0.0, 0.0, s.z,  c.z, 0.0, 0.0,0.0,  0.0, 1.0, 0.0,0.0,  0.0, 0.0, 1.0);
+    mat4 sc = mat4(scale.x, 0.0, 0.0, 0.0, 0.0, scale.y, 0.0, 0.0, 0.0, 0.0, scale.z, 0.0,0.0, 0.0, 0.0, 1.0);
+    mat4 tr = mat4(1.0, 0.0, 0.0, 0.0,0.0, 1.0, 0.0, 0.0,0.0, 0.0, 1.0, 0.0,translate.x, translate.y, translate.z, 1.0);
 
-uniform mat4 modelViewMatrix;
-uniform mat4 projectionMatrix;
-varying vec4 fColor;
+    gl_Position = modelViewMatrix * tr * rz * ry * rx * sc * vPosition;
+  }
+  </script>
 
-void main()
-{
-    gl_Position = projectionMatrix*modelViewMatrix*vPosition;
-    fColor = vColor;
-}
-</script>
-
-<script id="fragment-shader" type="x-shader/x-fragment">
-
-precision mediump float;
-varying vec4 fColor;
-
-void main()
-{
-//    gl_FragColor = fColor;//vec4(0.0, 0.0, 0.0, 1.0);
-    gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
-}
-</script>
-<script type="text/javascript" src="../common/webgl-utils.js"></script>
-<script type="text/javascript" src="../common/initShaders.js"></script>
-<script type="text/javascript" src="../common/MV.js"></script>
-<script type="text/javascript" src="shapes/cone.js"></script>
-<script type="text/javascript" src="shapes/cylinder.js"></script>
-<script type="text/javascript" src="shapes/sphere.js"></script>
-<script type="text/javascript" src="assignment3.js"></script>
+  <script id="fragment-shader" type="x-shader/x-fragment">
+  precision mediump float;
+  uniform vec4 fColor;
+  void main() {
+    gl_FragColor = fColor;
+  }
+  </script>
+  <script type="text/javascript" src="../../Common/webgl-utils.js"></script>
+  <script type="text/javascript" src="../../Common/initShaders.js"></script>
+  <script type="text/javascript" src="../../Common/flatten.js"></script>
+  <script type="text/javascript" src="../../Common/MV.js"></script>
+  <script type="text/javascript" src="shapes/primitives.js"></script>
+  <script type="text/javascript" src="assignment3.js"></script>
 </head>
 
-<body>
-<h1>Webgl Assignment 3: CAD-Like Program</h1>
-<div id="container">
-<div id = "left">
-<canvas id="gl-canvas" width="1020" height="800">
-Oops ... your browser doesn't support the HTML5 canvas element
-</canvas>
-</div>
-<div id ="right">
-<p> </p>
-<button id = "Button0">Increase theta</button>
-<button id = "Button1">Decrease theta</button>
-<button id = "Button2">Increase phi</button>
-<button id = "Button3">Decrease phi</button>
-<button id = "Button4">Increase Subdivisions</button>
-<button id = "Button5">Decrease Subdivisions</button>
-<div>
-Color
-<select id = "color">
-    <option value = "0">Black</option>
-    <option value = "1">Red</option>
-    <option value = "2">Yellow</option>
-    <option value = "3">Green</option>
-    <option value = "4">Blue</option>
-    <option value = "5">Magenta</option>
-    <option value = "6">Cyan</option>
-</select>
-Shape type
-<select id = "shape">
-    <option value = "0">Sphere</option>
-    <option value = "1">Cone</option>
-    <option value = "2">Cylinder</option>
-</select>
+<body class="assignment">
 
-<p> </p>
-<!--  rotate -->
-   <div class="form-group">
-     <label for="rotateX">Rotate X</label>
-     <input type=range id=rotateX min=-180 value=60 max=180 step=15 oninput="outputRX(value)">
-     <output for=rotateX id=rxv>60</output>
-   </div>
-   <div class="form-group">
-     <label for="rotateY">Rotate Y</label>
-     <input type=range id=rotateY min=-180 value=0 max=180 step=15 oninput="outputRY(value)">
-     <output for=rotateY id=ryv>0</output>
-   </div>
-   <div class="form-group">
-     <label for="rotateZ">Rotate Z</label>
-     <input type=range id=rotateZ min=-180 value=0 max=180 step=15 oninput="outputRZ(value)">
-     <output for=rotateZ id=rzv>0</output>
-   </div>
+  <header>
+    <h1>Assignment 3</h1>
+    <h2>Geometric CAD</h2>
+  </header>
 
-   <!-- scale -->
-   <div class="form-group">
-     <label for="scaleX">Scale X</label>
-     <input type=range id=scaleX min=0.1 value=0.2 max=2.0 step=0.1 oninput="outputSX(value)">
-     <output for=scaleX id=sxv>0.2</output>
-   </div>
-   <div class="form-group">
-     <label for="scaleY">Scale Y</label>
-     <input type=range id=scaleY min=0.1 value=0.2 max=2.0 step=0.1 oninput="outputSY(value)">
-     <output for=scaleY id=syv>0.2</output>
-   </div>
-   <div class="form-group">
-     <label for="scaleZ">Scale Z</label>
-     <input type=range id=scaleZ min=0.1 value=0.2 max=2.0 step=0.1 oninput="outputSZ(value)">
-     <output for=scaleZ id=szv>0.2</output>
-   </div>
+  <section id="settings" class="settings side-controls">
+    <div class="form-group">
+      <label for="shape">Shape</label>
+      <select name="shape" id="shape">
+        <option value="Sphere">Sphere</option>
+        <option value="Cylinder">Cylinder</option>
+        <option value="Cone">Cone</option>
+      </select>
+    </div>
+    Color
+    <select id = "color">
+        <option value = "0">Black</option>
+        <option value = "1">Red</option>
+        <option value = "2">Yellow</option>
+        <option value = "3">Green</option>
+        <option value = "4">Blue</option>
+        <option value = "5">Magenta</option>
+        <option value = "6">Cyan</option>
+    </select>
 
-   <!-- translate -->
-   <div class="form-group">
-     <label for="translateX">Translate X</label>
-     <input type=range id=translateX min=-1.0 value=0 max=1.0 step=0.1 oninput="outputTX(value)">
-     <output for=translateX id=txv>0</output>
-   </div>
-   <div class="form-group">
-     <label for="translateY">Translate Y</label>
-     <input type=range id=translateY min=-1.0 value=0 max=1.0 step=0.1 oninput="outputTY(value)">
-     <output for=translateY id=tyv>0</output>
-   </div>
-   <div class="form-group">
-     <label for="translateZ">Translate Z</label>
-     <input type=range id=translateZ min=-1.0 value=0 max=1.0 step=0.1 oninput="outputTZ(value)">
-     <output for=translateZ id=tzv>0</output>
-   </div>
-</div>
-</div>
+    <div class="form-group">
+      <label for="rotateX">Rotate X</label>
+      <input type=range id=rotateX min=-180 value=60 max=180 step=15 >
+      <output for=rotateX id=rxv>60</output>
+    </div>
+    <div class="form-group">
+      <label for="rotateY">Rotate Y</label>
+      <input type=range id=rotateY min=-180 value=0 max=180 step=15 >
+      <output for=rotateY id=ryv>0</output>
+    </div>
+    <div class="form-group">
+      <label for="rotateZ">Rotate Z</label>
+      <input type=range id=rotateZ min=-180 value=0 max=180 step=15 >
+      <output for=rotateZ id=rzv>0</output>
+    </div>
+    <div class="form-group">
+      <label for="scaleX">Scale X</label>
+      <input type=range id=scaleX min=0.1 value=0.2 max=2.0 step=0.1 >
+      <output for=scaleX id=sxv>0.2</output>
+    </div>
+    <div class="form-group">
+      <label for="scaleY">Scale Y</label>
+      <input type=range id=scaleY min=0.1 value=0.2 max=2.0 step=0.1 >
+      <output for=scaleY id=syv>0.2</output>
+    </div>
+    <div class="form-group">
+      <label for="scaleZ">Scale Z</label>
+      <input type=range id=scaleZ min=0.1 value=0.2 max=2.0 step=0.1>
+      <output for=scaleZ id=szv>0.2</output>
+    </div>
+    <div class="form-group">
+      <label for="translateX">Translate X</label>
+      <input type=range id=translateX min=-1.0 value=0 max=1.0 step=0.1>
+      <output for=translateX id=txv>0</output>
+    </div>
+    <div class="form-group">
+      <label for="translateY">Translate Y</label>
+      <input type=range id=translateY min=-1.0 value=0 max=1.0 step=0.1>
+      <output for=translateY id=tyv>0</output>
+    </div>
+    <div class="form-group">
+      <label for="translateZ">Translate Z</label>
+      <input type=range id=translateZ min=-1.0 value=0 max=1.0 step=0.1>
+      <output for=translateZ id=tzv>0</output>
+    </div>
+    <div class="form-group actions">
+      <button id="clear" class="button button-small"><i id="clearIcon" class="fa fa-refresh icon"></i>Reset</button>
+    </div>
+
+  </section>
+
+    <div class="drawing-area">
+      <canvas id="gl-canvas" width="800" height="700">
+        Oops ... your browser doesn't support the HTML5 canvas element
+      </canvas>
+    </div>
 </body>
 </html>
