Deployed by grunt gh-pages

--- a/code/assignment3.html
+++ b/code/assignment3.html
@@ -34,10 +34,11 @@
     gl_FragColor = fColor;
   }
   </script>
-  <script type="text/javascript" src="../../Common/webgl-utils.js"></script>
-  <script type="text/javascript" src="../../Common/initShaders.js"></script>
-  <script type="text/javascript" src="../../Common/flatten.js"></script>
-  <script type="text/javascript" src="../../Common/MV.js"></script>
+  <script type="text/javascript" src="../common/webgl-utils.js"></script>
+  <script type="text/javascript" src="../common/initShaders.js"></script>
+  <script type="text/javascript" src="../common/MV.js"></script>
+
+  <script type="text/javascript" src="../common/flatten.js"></script>
   <script type="text/javascript" src="shapes/primitives.js"></script>
   <script type="text/javascript" src="assignment3.js"></script>
 </head>
