Deployed by grunt gh-pages

--- a/code/assignment3.html
+++ b/code/assignment3.html
@@ -117,8 +117,8 @@
     </div>
     <div class="form-group actions">
       <button id="clear" class="button button-small"><i id="clearIcon" class="fa fa-refresh icon"></i>Reset</button>
-      <button id="commitShape" title="save the current shape" class="button button-small"><i id="commitShapeIcon" class="fa fa-check icon"></i>Commit</button>
-      <button id="newShape" title="create a new shape" class="button button-small toggle"><i id="newShapeIcon" class="fa fa-plus icon"></i>Add</button>
+      <button id="commitShape" title="save the current shape" class="button button-small"><i id="commitShapeIcon" class="fa fa-check icon"></i>Save current shape</button>
+      <button id="newShape" title="create a new shape" class="button button-small toggle"><i id="newShapeIcon" class="fa fa-plus icon"></i>Add new shape</button>
     </div>
   </section>
 </div>
