edited header path

--- a/code/assignment4.html
+++ b/code/assignment4.html
@@ -85,7 +85,7 @@
 </head>
 
 <body class="assignment">
-  <h1>Lights and Shading</h1>
+  <h1>Lighting and Shading</h1>
   <div id="container">
   <div id="right">
   <section id="settings" class="settings side-controls">
